--- a/HW1/CeasarCipher/CipherImplementation/CipherImplementation.csproj
+++ b/HW1/CeasarCipher/CipherImplementation/CipherImplementation.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CeasarCipher.cs" />
+    <Compile Include="CipherOperation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
